--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@ng-select/ng-select": "^7.3.0",
     "bootstrap": "^5.1.3",
     "ngx-bootstrap": "^7.1.0",
     "ngx-editor": "^11.1.1",
