--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@ng-select/ng-select": "^7.3.0",
     "bootstrap": "^5.1.3",
+    "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^7.1.0",
     "ngx-editor": "^11.1.1",
     "rxjs": "~6.6.0",
